2007.12.13: David Nichols
	* fixed tibae namespace handling for subprogram objects (backported from
	  trunk/0.7.0)
	* fixed ncurses, pgsql, tibrv, and tuxedo module namespace handling for 
	  subprogram objects (backported from trunk/0.7.0)

2007.12.08: David Nichols
	* fixed proxy URL reporting in Qore HTTPClient::getProxyURL() (was
	  reporting the target port instead of the proxy port)

2007.11.25: David Nichols
        * fixed local and global variable destruction order (backported from 
	  0.7.0)

2007.11.14: David Nichols
	* do not throw an exception with sort*() when first argument is not a
	  list; instead just return the first argument

2007.10.28: David Nichols
	* do not include the trailing null when compressing strings with gzip or
	  deflate methods, in particular this causes problems with browsers and
	  XML-RPC or JSON-RPC HTTP payloads

2007.10.16: David Nichols
	* fixed a memory bug in XML parsing with multiple out-of-order keys
	  (backported from 0.7.0)

2007.09.25: David Nichols
	* fixed a memory bug in QoreString::parseBase64ToString()

2007.09.24: David Nichols
        * fixed a stupid memory bug in QoreString when instantiating from a
          boolean argument

2007.08.28: David Nichols
        * implemented decode_url() to decode URL escape encodings (backported
	  from trunk/0.7.0 branch)
        * updated HTTPClient to automatically encode space (' ') characters as
          '%20' in the path before sending (backported from trunk/0.7.0 branch)

2006.07.26: David Nichols
	* fixed a thread resource management bug in the DatasourcePool class
	  (thread resource errors would cause a crash) (backported from 
	  trunk/0.7.0 branch)

2006.07.19: David Nichols
        * fixed a bug in HTTPClient::head(), was erroneously trying to read the
          message body (backported from trunk/0.7.0 branch)

2006.07.17:
        * fixed a bug where null values could be inserted into the parse tree